--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,15 @@ repositories {
     maven {
         url = 'https://repo.maven.apache.org/maven2'
     }
+    maven {
+        url = 'https://mvnrepository.com/artifact/com.launchdarkly/okhttp-eventsource'
+    }
 }
 
 dependencies {
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
     implementation 'io.ably:ably-java:1.1.11'
+    implementation 'com.launchdarkly:okhttp-eventsource:2.3.0'
     compileOnly 'org.apache.jmeter:ApacheJMeter_core:5.1.1'
     compileOnly 'org.apache.jmeter:ApacheJMeter_java:5.1.1'
 }
